--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css" />
     <title>Converter</title>
   </head>
@@ -16,15 +17,15 @@
       </div>
       <div class="info">
         <h2>Length (Meters/Feet)</h2>
-        <p id="length-el"></p>
+        <p id="length-el">0 meters = 0 feet | 0 feet = 0 meters</p>
       </div>
       <div class="info">
         <h2>Volume (Liters/Gallons)</h2>
-        <p id="volume-el"></p>
+        <p id="volume-el">0 liters = 0 gallons | 0 gallons = 0 liters</p>
       </div>
       <div class="info">
-        <h2>Mass (Kilograms/Pounds</h2>
-        <p id="mass-el"></p>
+        <h2>Mass (Kilograms/Pounds)</h2>
+        <p id="mass-el">0 kilograms = 0 pounds | 0 pounds = 0 kilograms</p>
       </div>
     </div>
     <script src="index.js"></script>
