--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
       <div class="info">
         <h2>Mass (Kilograms/Pounds)</h2>
-        <p id="mass-el">0 kilograms = 0 pounds | 0 pounds = 0 kilograms</p>
+        <p id="mass-el">0 kilos = 0 pounds | 0 pounds = 0 kilos</p>
       </div>
     </div>
     <script src="index.js"></script>
