--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
   <body>
     <div class="main">
       <div class="inner-div">
-        <h1>Metric/Imperial Unit Conversion</h1>
+        <h1>Metric/Imperial<br />Unit Conversion</h1>
         <input id="input-el" type="number" placeholder="0" />
         <br />
         <button id="convert-btn">Convert</button>
       </div>
       <div class="info">
-        <h2>Length (Meters/Feet)</h2>
-        <p id="length-el">0 meters = 0 feet | 0 feet = 0 meters</p>
+        <h2>Length<br />(Meters/Feet)</h2>
+        <p id="length-el">0 meters = 0 feet<br />0 feet = 0 meters</p>
       </div>
       <div class="info">
-        <h2>Volume (Liters/Gallons)</h2>
-        <p id="volume-el">0 liters = 0 gallons | 0 gallons = 0 liters</p>
+        <h2>Volume<br />(Liters/Gallons)</h2>
+        <p id="volume-el">0 liters = 0 gallons<br />0 gallons = 0 liters</p>
       </div>
       <div class="info">
-        <h2>Mass (Kilograms/Pounds)</h2>
-        <p id="mass-el">0 kilos = 0 pounds | 0 pounds = 0 kilos</p>
+        <h2>Mass<br />(Kilograms/Pounds)</h2>
+        <p id="mass-el">0 kilos = 0 pounds<br />0 pounds = 0 kilos</p>
       </div>
     </div>
     <script src="index.js"></script>
