--- a/index.html
+++ b/index.html
@@ -4,27 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Golos+Text&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css" />
     <title>Converter</title>
   </head>
   <body>
     <div class="main">
       <div class="inner-div">
-        <h1>Metric / Imperial<br />Unit Conversion</h1>
+        <h1>Metric - Imperial<h1/>
+        <h2 class="main-h2">Unit Conversion</h2>
         <input id="input-el" type="number" placeholder="0" />
         <br />
         <button id="convert-btn">Convert</button>
       </div>
       <div class="info">
-        <h2>Length<br />(Meters/Feet)</h2>
+        <h2>Length<h2/>
+        <h3>Meters - Feet</h3>
         <p id="length-el">0 meters = 0 feet<br />0 feet = 0 meters</p>
       </div>
       <div class="info">
-        <h2>Volume<br />(Liters/Gallons)</h2>
+        <h2>Volume<h2/>
+        <h3>Liters - Gallons</h3>
         <p id="volume-el">0 liters = 0 gallons<br />0 gallons = 0 liters</p>
       </div>
       <div class="info">
-        <h2>Mass<br />(Kilograms/Pounds)</h2>
+        <h2>Mass<h2/>
+        <h3>Kilograms - Pounds</h3>
         <p id="mass-el">0 kilos = 0 pounds<br />0 pounds = 0 kilos</p>
       </div>
     </div>
