--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
       <div class="info">
         <h2>Length<h2/>
         <h3>Meters - Feet</h3>
-        <p id="length-el">0 meters = 0 feet<br />0 feet = 0 meters</p>
+        <p id="length-el">0 meters = 0 feet | 0 feet = 0 meters</p>
       </div>
       <div class="info">
         <h2>Volume<h2/>
         <h3>Liters - Gallons</h3>
-        <p id="volume-el">0 liters = 0 gallons<br />0 gallons = 0 liters</p>
+        <p id="volume-el">0 liters = 0 gallons | 0 gallons = 0 liters</p>
       </div>
       <div class="info">
         <h2>Mass<h2/>
         <h3>Kilograms - Pounds</h3>
-        <p id="mass-el">0 kilos = 0 pounds<br />0 pounds = 0 kilos</p>
+        <p id="mass-el">0 kilos = 0 pounds | 0 pounds = 0 kilos</p>
       </div>
     </div>
     <script src="index.js"></script>
