--- a/index.html
+++ b/index.html
@@ -20,18 +20,15 @@
         <button id="convert-btn">Convert</button>
       </div>
       <div class="info">
-        <h2>Length<h2/>
-        <h3>Meters - Feet</h3>
+        <h2>Length (Meters - Feet)</h2>
         <p id="length-el">0 meters = 0 feet | 0 feet = 0 meters</p>
       </div>
       <div class="info">
-        <h2>Volume<h2/>
-        <h3>Liters - Gallons</h3>
+        <h2>Volume (Liters - Gallons)</h2>
         <p id="volume-el">0 liters = 0 gallons | 0 gallons = 0 liters</p>
       </div>
       <div class="info">
-        <h2>Mass<h2/>
-        <h3>Kilograms - Pounds</h3>
+        <h2>Mass (Kilograms - Pounds)</h2>
         <p id="mass-el">0 kilos = 0 pounds | 0 pounds = 0 kilos</p>
       </div>
     </div>
