--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Golos+Text&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css" />
     <title>Converter</title>
   </head>
@@ -18,7 +15,7 @@
       <div class="inner-div">
         <h1>Metric - Imperial</h1>
         <h2 class="main-h2">Unit Conversion</h2>
-        <input id="input-el" type="number" placeholder="0" />
+        <input id="input-el" type="number" placeholder="0" value="0" />
         <br />
         <button id="convert-btn">Convert</button>
       </div>
